Import of HAYAJO/Mojolicious-Plugin-AccessControl-0.02 from CPAN.
gitpan-cpan-distribution: Mojolicious-Plugin-AccessControl
gitpan-cpan-version:      0.02
gitpan-cpan-path:         HAYAJO/Mojolicious-Plugin-AccessControl-0.02.tar.gz
gitpan-cpan-author:       HAYAJO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Mojolicious::Plugin::AccessControl
 
+0.02
+        - added 'on_deny' option
+
 0.01
         - original version
