Import of HAYAJO/Mojolicious-Plugin-AccessControl-0.04 from CPAN.
gitpan-cpan-distribution: Mojolicious-Plugin-AccessControl
gitpan-cpan-version:      0.04
gitpan-cpan-path:         HAYAJO/Mojolicious-Plugin-AccessControl-0.04.tar.gz
gitpan-cpan-author:       HAYAJO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -130,6 +130,11 @@ OPTIONS
 AUTHOR
     hayajo <hayajo@cpan.org>
 
+CONTRIBUTORS
+    Many thanks to the contributors for their work.
+
+    oliverguenther@github
+
 SEE ALSO
     Mojolicious, Mojolicious::Guides::Routing, Plack::Middleware::Access,
     Plack::Builder::Conditionals,
